tests/integration/snapshots/integration__conformance__y_string_nbsp_uescaped.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
["new\u00A0line"]
stdout ---
["new\u00A0line"]

stderr ---
