tests/integration/snapshots/integration__conformance__y_string_noncharacterinutf-8_u+10ffff.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["􏿿"]
stdout ---
[
  "􏿿"
]

stderr ---
