tests/integration/snapshots/integration__conformance__y_string_null_escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u0000"]
stdout ---
["\u0000"]

stderr ---
