tests/integration/snapshots/integration__conformance__y_string_one-byte-utf-8.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\u002c"]
stdout ---
[
  "\u002c"
]

stderr ---
